Fix AuthPanel refresh method + add .npmrc for GitHub Packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com/"
+},
+"registries": {
+  "@nexus-cores": "https://npm.pkg.github.com/"
+},
+
   "type": "module",
   "license": "MIT",
   "scripts": {
